--- a/ejercicios-tabata-online.html
+++ b/ejercicios-tabata-online.html
@@ -51,35 +51,35 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Entrenamiento tabata online. Realiza ejercicios tabata en casa con nuestros videos y ponte en forma en nuestro gimnasio online." />
     <meta property="og:description" content="Ejercicios tabata en casa con tu entrenamiento online. Clases, videos y rutina tabata para ponerte más en forma que nunca." />
-    <meta property="og:url" content="https://www.ictiva.com/homes/ejercicios-tabata-online/" />
+    <meta property="og:url" content="https://www.ictiva.com../ictiva/homes/ejercicios-tabata-online.html" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/homes/ejercicios-tabata-online/” />
+    <link rel=”canonical” href=”https://www.ictiva.com../ictiva/homes/ejercicios-tabata-online.html” />
 
     <!--Icon, favicon & webapp -->
-    <link rel="shortcut icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link rel="icon" href="/homes/img/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="/homes/img/favicon.ico" type="image/ico"/>
+    <link rel="shortcut icon" href="../ictiva/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="../ictiva/homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="../ictiva/homes/img/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="../ictiva/homes/img/favicon.ico" type="image/ico"/>
 
     <!-- Bootstrap core CSS -->
-    <link href="/homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../ictiva/homes/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="/homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../ictiva/homes/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="/homes/css/magnific-popup.min.css" rel="stylesheet">
+    <link href="../ictiva/homes/css/magnific-popup.min.css" rel="stylesheet">
 
-    <link href="/homes/css/custom.min.css" rel="stylesheet">
+    <link href="../ictiva/homes/css/custom.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 
-    <!-- Temporary navbar container fix -->
+    <!-- Temporary navbar container fix 
     <style>
     header{
         margin-top: 0!important;
@@ -97,31 +97,56 @@
         }
     }
     </style>
-
+-->
 </head>
 
 <body id="page-top">
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRF3HL"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRF3HL"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-<div class="cookies home d-none" id="cookie-message">
-    <div id="cookie-close" class="close-message"><a href="javascript:;"></a></div>
-    <p>Utilizamos cookies propias y de terceros para mejorar nuestros servicios y mostrarle publicidad relacionada con sus preferencias mediante el análisis de sus hábitos de navegación. Puedes modificar esta opción en tu navegador, por tanto si continuas navegando sin modificarlo, consideramos que aceptas su uso. <a href="/politica-de-privacidad-y-cookies/" target="_blank">¿Quieres ver nuestra política de cookies?</a></p>
-</div>
+    <div class="cookies home d-none" id="cookie-message">
+        <div id="cookie-close" class="close-message"><a href="javascript:;"></a></div>
+        <p>Utilizamos cookies propias y de terceros para mejorar nuestros servicios y mostrarle publicidad relacionada con sus preferencias mediante el análisis de sus hábitos de navegación. Puedes modificar esta opción en tu navegador, por tanto si continuas navegando sin modificarlo, consideramos que aceptas su uso. <a href="/politica-de-privacidad-y-cookies/" target="_blank">¿Quieres ver nuestra política de cookies?</a></p>
+    </div>
+    <div id="menu-wrap" class="container-fluid bg-white fixed-top">
+        <div class="row my-2">
+            <nav class="navbar navbar-toggleable-md navbar-light col-4 col-lg-3 bg-white">
+                <div class="container pl-lg-0">
+                    <a class="navbar-brand" href="#page-top">
+                        <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
+                    </a>
+                </div>
+            </nav>
+            <div class="col-lg-6 no-padding bg-white hidden-md-down">                
+                <div class="w-100 text-center">
+                    <p class="h1 mb-0">Tu Gimnasio Online</p>
+                </div>
+            </div>
+            <div class="col-8 col-lg-3 no-padding bg-white">
+                <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
+                    <li class="bg-grey p-0 py-sm-2 p-xl-2">
+                        <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                    </li>
+                    <li class="bg-primary p-0 py-sm-2 p-xl-2">
+                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <header class="bg-gym d-flex align-items-center">
         <div class="row align-items-center h-100 m-0 w-100">
             <div class="col text-center no-padding">
-                <img src="/homes/img/iconos/ictiva-logo-rev.png" style="max-width: 150px;" width="auto" height="auto" alt="ictiva-logo" class="img-fluid py-5">
                 <h1 class="display-1 text-white text-uppercase">Tabata Online</h1>
-                <h2 class="text-white font-weight-bold py-5">Ejercicios de Tabata para hacer en casa</h2>
+                <h2 class="text-white font-weight-bold py-5 px-2">Ejercicios de Tabata para hacer en casa</h2>
 
                 <!-- Button trigger modal -->
-                <button type="button" class="btn play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="/homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
+                <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
+                  <img src="../ictiva/homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
                 
@@ -140,12 +165,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                 </div>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a></p>
                     </div>
                   </div>
                 </div>
@@ -157,9 +182,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row no-padding">
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="../ictiva/homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
-                            <h2 class="mx-0 mx-sm-5 text-white display-4 text-uppercase">Entrenamiento Tabata por niveles</h2>
+                            <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase">Entrenamiento Tabata por niveles</h2>
                             <div class="hidden-sm-down text-white">
                                 <p class="lead mt-5 text-bigger">Principiante</p>
                                 <p class="lead text-bigger">Básico</p>
@@ -167,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <p class="lead text-bigger">Avanzado</p>
                                 <p class="lead text-bigger">Pro</p>
                                 <p class="py-5">
-                                    <a class="btn btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a>
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a>
                                 </p>
                             </div>
                         </figcaption>
@@ -175,15 +200,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col-md-6 no-padding text-center block">                    
                     <figure class="cl-box">
-                        <img class="img-fluid" src="/homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
+                        <img class="img-fluid" src="../ictiva/homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
                         <figcaption class="cl-content">
-                            <h2 class="mx-0 mx-sm-5 text-white display-4 text-uppercase">Ejercicios Tabata para:</h2>
+                            <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase">Ejercicios Tabata<span class="hidden-sm-down"> para:</span></h2>
                             <div class="hidden-sm-down text-white">
                                 <p class="lead mt-5 text-bigger">Perder peso</p>
                                 <p class="lead text-bigger">Tonificar tu cuerpo</p>
                                 <p class="lead text-bigger">Ganar masa muscular</p>
                                 <p class="py-5">
-                                    <a class="btn btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a>
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">PRUEBA GRATIS</a>
                                 </p>
                             </div>
                         </figcaption>
@@ -195,23 +220,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div class="container-fluid py-5 px-sm-5 bg-motitrainer">
         <div class="row py-5 my-0 align-items-center h-100">
-            <div class="col-12 offset-md-4 col-md-8 text-white text-right px-5">
-              <h3 class="display-3 py-4 text-uppercase">MÁS FUERTE QUE NUNCA</h1>
+            <div class="col-12 offset-md-4 col-md-8 text-white text-right px-md-5">
+              <h3 class="display-3 py-4 text-uppercase">MÁS FUERTE QUE NUNCA</h3>
               <p class="lead py-2 text-bigger">La herramienta para hacer ejercicios en casa que te premia por mantenerte siempre activo y motivado en tus entrenamientos!</p>
               <p class="py-5">
-                    <a class="btn btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">CONSULTA NUESTRAS TARIFAS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata">CONSULTA NUESTRAS TARIFAS</a>
                 </p>
             </div>
         </div>
     </div>
     <div class="container-fluid py-5 px-sm-5 bg-app">
         <div class="row py-0 py-lg-5 my-0 align-items-center h-100">
-            <div class="col-12 col-md-10 col-lg-9 text-white px-5">
-              <h3 class="display-4 py-4 text-uppercase">Tu rutina de ejercicios en el bolsillo con tu gimnasio online</h1>
+            <div class="col-12 col-md-10 col-lg-9 text-white px-md-5">
+              <h3 class="display-4 py-4 text-uppercase">Tu rutina de ejercicios en el bolsillo con tu gimnasio online</h3>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata" target="_blank"><img src="/homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata" target="_blank"><img src="/homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata" target="_blank"><img src="../ictiva/homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-tabata-online&utm_medium=adwords-landing&utm_campaign=tabata" target="_blank"><img src="../ictiva/homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
@@ -219,8 +244,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container-fluid">
         <div class="row text-center py-4">
             <div class="col">
-                <img src="/homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
-                <img src="/homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
+                <img src="../ictiva/homes/img/logos-footer/CERTIFICADO_ENISA-web70.jpg" class="img-fluid sr-icons enisa-icon" width="auto" alt="certificado enisa">
+                <img src="../ictiva/homes/img/logos-footer/confianza-online.svg" class="img-fluid sr-icons ml-4" width="70" alt="certificado confianza online">
             </div>
         </div>
     </div>
@@ -233,19 +258,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/homes/vendor/jquery/jquery.min.js"></script>
-    <script src="/homes/vendor/tether/tether.min.js"></script>
-    <script src="/homes/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../ictiva/homes/vendor/jquery/jquery.min.js"></script>
+    <script src="../ictiva/homes/vendor/tether/tether.min.js"></script>
+    <script src="../ictiva/homes/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="/homes/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="/homes/vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="/homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="../ictiva/homes/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../ictiva/homes/vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="../ictiva/homes/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="/homes/js/creative.min.js"></script>
+    <script src="../ictiva/homes/js/creative.min.js"></script>
 
-    <script src="/homes/js/tutorial.min.js"></script>
+    <script src="../ictiva/homes/js/tutorial.min.js"></script>
 
     <script> 
       $('.navbar-nav>li>a').on('click', function(){
