--- a/fitness-online.html
+++ b/fitness-online.html
@@ -78,6 +78,26 @@
     <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
+
+    <!-- Temporary navbar container fix 
+    <style>
+    header{
+        margin-top: 0!important;
+    }
+    .bg-gym{
+        min-height: 100vh!important;
+    }
+    .navbar-toggler {
+        z-index: 1;
+    }
+    
+    @media (max-width: 576px) {
+        nav > .container {
+            width: 100%;
+        }
+    }
+    </style>
+-->
 </head>
 
 <body id="page-top">
@@ -119,25 +139,20 @@
         </div>
     </div>
 
-    <header class="bg-gym d-flex align-items-center section-header-video">
-        <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="../ictiva/homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="../ictiva/homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
-        <div class="row align-items-center h-100 m-0 w-100 bg-video">
+    <header class="bg-gym d-flex align-items-center">
+        <div class="row align-items-center h-100 m-0 w-100">
             <div class="col text-center no-padding">
-                <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
+                <h1 class="display-1 text-white text-uppercase">Fitness Online</h1>
                 <h2 class="text-white font-weight-bold py-5 px-2">Tus ejercicios de Fitness en casa</h2>
 
-                <!-- Button trigger modal 
+                <!-- Button trigger modal -->
                 <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
                   <img src="../ictiva/homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
                 
 
-                <!-- Modal 
+                <!-- Modal -->
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -150,7 +165,6 @@
                         </div>
                     </div>
                 </div>
-                -->
                 <div class="hidden-xs-down">
                     <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">PRUEBA GRATIS</a></p>
                 </div>
