--- a/hiit-en-casa.html
+++ b/hiit-en-casa.html
@@ -100,7 +100,7 @@
                     </a>
                 </div>
             </nav>
-            <div class="col-lg-6 no-padding bg-white hidden-md-down">                
+            <div class="col-lg-6 no-padding bg-white hidden-md-down pt-2">                
                 <div class="w-100 text-center">
                     <p class="h1 mb-0">Tu Gimnasio Online</p>
                 </div>
@@ -118,11 +118,6 @@
         </div>
     </div>
     <header class="bg-gym d-flex align-items-center section-header-video">
-        <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding">
                 <h1 class="display-1 text-white text-uppercase text-shadow">HIIT en Casa</h1>
@@ -160,6 +155,11 @@
                 </div>
             </div>
         </div>
+        <video autoplay loop muted class="w-100 hidden-lg-down">
+            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
     </header>
     <section class="no-padding" id="top-section">
         <div class="container-fluid">
