--- a/fitness-online.html
+++ b/fitness-online.html
@@ -101,7 +101,7 @@
                     </a>
                 </div>
             </nav>
-            <div class="col-lg-6 no-padding bg-white hidden-md-down">                
+            <div class="col-lg-6 no-padding bg-white hidden-md-down pt-2">                
                 <div class="w-100 text-center">
                     <p class="h1 mb-0">Tu Gimnasio Online</p>
                 </div>
@@ -120,11 +120,6 @@
     </div>
 
     <header class="bg-gym d-flex align-items-center section-header-video">
-        <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
-            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
-            Your browser does not support HTML5 video.
-        </video>
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding">
                 <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
@@ -163,7 +158,46 @@
                 </div>
             </div>
         </div>
+        <video autoplay loop muted class="w-100 hidden-lg-down">
+            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
     </header>
+    <section class="no-padding">
+        <div class="container-fluid">
+            <div class="row py-5">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-3">
+                        <img src="homes/img/iconos/tiempo.png" class="sr-icons mb-3" alt="reloj" height="80px" width="auto">
+                        <h4 class="h3">24 HORAS/ 365 DÍAS</h3>
+                        <p class="text-muted">Acceso ilimitado donde quieras y a la hora que quieras.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div>
+                        <img src="homes/img/iconos/ejercicio.png" class="sr-icons mb-2" alt="abdominales" height="100px" width="auto">
+                        <h4 class="h3">+800 CLASES</h3>
+                        <p class="text-muted">Clases dirigidas con ejercicios de 21 disciplinas diferentes.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-3">
+                        <img src="homes/img/iconos/niveles.png" class="sr-icons mb-3" alt="companero" height="80px" width="auto">
+                        <h4 class="h3">TU PONES EL LÍMITE</h3>
+                        <p class="text-muted">5 niveles de dificultad para adaptarse a tu forma física.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-3">
+                        <img src="homes/img/iconos/copa.png" class="sr-icons mb-3" alt="sonrisa" height="80px" width="auto">
+                        <h4 class="h3">MOTIVATOR SYSTEM</h3>
+                        <p class="text-muted">Haz los ejercicios y suma puntos, sube en la clasificación y gana premios.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="no-padding" id="top-section">
         <div class="container-fluid">
             <div class="row no-padding">
